# Markdown2Graph

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  cli.py  config.py  errors.py  extensions.py  wsgi.py
backend/app/api/: __init__.py  chat_api.py  config_api.py  documents.py  embeddings_api.py  graph.py  health.py  ingest.py  jobs.py  llm_calls.py  prompts_api.py  runtime_settings.py  schema.py  settings_api.py  upload.py
backend/app/llm/: __init__.py  client.py  recorder.py
backend/app/prompts/: __init__.py  chat_question_rewrite.md  chat_system.md  chat_title_generate.md  entity_extraction_instructions.md  graph_cleanup_system.md  schema_discovery_system.md
backend/app/prompts/templates/general/: community_summary_system.md  (+3 more)
backend/app/repositories/: app_state_repository.py  chat_repository.py  graph_repository.py  llm_call_repository.py  settings_repository.py
backend/app/services/: chat_service.py  chunker.py  embedding_service.py  entity_extractor.py  job_registry.py  markdown_loader.py  pipeline.py  post_processing.py  post_processor.py  prompt_store.py  schema_discovery.py  settings_service.py
backend/tests/: conftest.py  test_app_state_repository.py  test_chunker.py  test_config.py  test_job_registry.py  test_llm_call_repository.py  test_markdown_loader.py  test_post_process_api.py  test_prompt_store.py  test_repository_sanitizers.py  test_schema_discovery_parsing.py  test_upload.py
backend/tests/sample_md/: aspirin.md  myocardial_infarction.md  with_frontmatter.md
(+85 files in other folders)
