[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "text2graph-backend"
version = "0.1.0"
description = "Markdown -> Neo4j knowledge graph (medical domain)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py310"
